test/pass/optargs/optarg_spectrum.lily
define f(
        a: *Integer=10,
        b: *Double=1.1,
        c: *ByteString=B"",
        d: *String="1",
        e: *Boolean=true)
{

}
